proyecto poke api terminado

--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
+    "postcss": "^8.3.11",
+    "postcss-loader": "^6.2.0",
+    "postcss-preset-env": "^6.7.0",
+    "pug": "^3.0.2",
+    "pug-loader": "^2.4.0",
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "terser-webpack-plugin": "^5.2.4",
