--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
+    "@babel/runtime": "7.17.9",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.3.0",
@@ -32,5 +33,8 @@
     "webpack": "^5.57.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.1"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "7.17.0"
   }
 }
