--- a/package.json
+++ b/package.json
@@ -10,31 +10,29 @@
   },
   "author": "Pedro Purihuaman",
   "license": "MIT",
-  "dependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/runtime": "7.17.9",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.3.0",
-    "css-minimizer-webpack-plugin": "^3.1.1",
-    "file-loader": "^6.2.0",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.4.4",
-    "postcss": "^8.3.11",
-    "postcss-loader": "^6.2.0",
-    "postcss-preset-env": "^6.7.0",
-    "pug": "^3.0.2",
-    "pug-loader": "^2.4.0",
-    "sass": "^1.42.1",
-    "sass-loader": "^12.1.0",
-    "terser-webpack-plugin": "^5.2.4",
-    "webpack": "^5.57.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.1"
-  },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "7.17.0"
+    "@babel/core": "7.15.8",
+    "@babel/plugin-transform-runtime": "7.17.0",
+    "@babel/preset-env": "7.15.8",
+    "@babel/runtime": "7.17.9",
+    "babel-loader": "8.2.2",
+    "copy-webpack-plugin": "9.0.1",
+    "css-loader": "6.3.0",
+    "css-minimizer-webpack-plugin": "3.1.1",
+    "file-loader": "6.2.0",
+    "html-loader": "2.1.2",
+    "html-webpack-plugin": "5.3.2",
+    "mini-css-extract-plugin": "2.4.4",
+    "postcss": "8.3.11",
+    "postcss-loader": "6.2.0",
+    "postcss-preset-env": "6.7.0",
+    "pug": "3.0.2",
+    "pug-loader": "2.4.0",
+    "sass": "1.42.1",
+    "sass-loader": "12.1.0",
+    "terser-webpack-plugin": "5.2.4",
+    "webpack": "5.57.0",
+    "webpack-cli": "4.8.0",
+    "webpack-dev-server": "4.3.1"
   }
 }
