--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-transform-runtime": "7.17.0",
     "@babel/preset-env": "7.15.8",
     "@babel/runtime": "7.17.9",
+    "autoprefixer": "10.4.7",
     "babel-loader": "8.2.2",
     "copy-webpack-plugin": "9.0.1",
     "css-loader": "6.3.0",
